[package]
name = "nms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
crossterm = {version = "0.26.1", features = ["use-dev-tty"] }
unicode-width = "0.1.10"
anstyle-parse = "0.2.1"
cansi = "2.2.1"
getopts = "0.2.21"
